[feat] : connected stt ttt tts