@@ -1,14 +1,19 @@
 package com.juckmagowoo.home.service;
 
-
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.client.reactive.ReactorClientHttpConnector;
 import org.springframework.stereotype.Service;
+import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Mono;
+import reactor.core.scheduler.Schedulers;
+import reactor.netty.http.client.HttpClient;
 
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -16,33 +21,60 @@ import java.util.Map;
 
 @Service
 public class ChatGptService {
-
     private final WebClient webClient;
+    private final TtsService ttsService;
+    private final SttService sttService;
+    private final ObjectMapper objectMapper;
 
-    public ChatGptService(@Value("${openai.api.key}") String apiKey) {
+    public ChatGptService(@Value("${openai.api.key}") String apiKey, TtsService ttsService, SttService sttService, ObjectMapper objectMapper) {
         this.webClient = WebClient.builder()
                 .baseUrl("https://api.openai.com/v1")
                 .defaultHeader("Authorization", "Bearer " + apiKey)
                 .defaultHeader("Content-Type", "application/json")
+                .clientConnector(new ReactorClientHttpConnector(HttpClient.create()
+                        .responseTimeout(Duration.ofMinutes(2))))
                 .build();
+        this.ttsService = ttsService;
+        this.sttService = sttService;
+        this.objectMapper = objectMapper;
     }
 
     /**
-     * 추가 프롬프트를 받아 질문과 함께 GPT의 답변 텍스트를 반환하는 메서드
-     *
-     * @param question 사용자 질문
-     * @param prompt   추가 시스템 프롬프트(예: "너는 친절하고 자세한 설명을 제공하는 어시스턴트이다.")
-     * @return GPT의 답변 텍스트
+     * 🎤 STT → ChatGPT(2개 프롬프트) → JSON + TTS(MP3 변환)
      */
-    public Mono<String> getAnswer(String question, String prompt) {
+    public Mono<byte[]> processAudioWithTwoPrompts(MultipartFile audioFile, String prompt1, String prompt2) {
+        return Mono.fromCallable(() -> sttService.transcribeAudio(audioFile))
+                .flatMap(question -> {
+                    System.out.println("🎤 STT 변환된 질문: " + question);
+
+                    return getAnswer(question, prompt1)
+                            .zipWith(getAnswer(question, prompt2), (response1, response2) -> {
+                                System.out.println("💬 GPT 응답 1: " + response1);
+                                System.out.println("💬 GPT 응답 2: " + response2);
+
+                                return ttsService.textToSpeech(response2)
+                                        .doOnNext(audioData -> {
+                                            try {
+                                                // 🔥 MP3 파일을 프로젝트 루트에 저장
+                                                Files.write(Paths.get("./gpt_answer.mp3"), audioData, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+                                            } catch (Exception e) {
+                                                e.printStackTrace();
+                                            }
+                                        });
+                            }).flatMap(mono -> mono);
+                })
+                .subscribeOn(Schedulers.boundedElastic());
+    }
+
+    /**
+     * GPT에게 질문을 보내고 답변을 받음
+     */
+    private Mono<String> getAnswer(String question, String prompt) {
         Map<String, Object> requestBody = new HashMap<>();
         requestBody.put("model", "gpt-3.5-turbo");
 
-        // 시스템 프롬프트와 사용자 메시지를 구성합니다.
         List<Map<String, String>> messages = new ArrayList<>();
-        // 추가 프롬프트(시스템 메시지)
         messages.add(Map.of("role", "system", "content", prompt));
-        // 사용자의 질문 메시지
         messages.add(Map.of("role", "user", "content", question));
         requestBody.put("messages", messages);
 
@@ -55,18 +87,11 @@ public class ChatGptService {
     }
 
     /**
-     * 질문과 프롬프트를 보내고 GPT의 답변을 받아 파일(gpt_answer.txt)에 저장한 후 답변 텍스트를 반환합니다.
+     * 저장된 MP3 파일을 반환
      */
-    public Mono<String> getAndSaveAnswer(String question, String prompt) {
-        return getAnswer(question, prompt)
-                .doOnNext(answer -> {
-                    try {
-                        Files.writeString(Paths.get("gpt_answer.txt"), answer,
-                                StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                    }
-                });
+    public Mono<byte[]> getGeneratedAudio() {
+        return Mono.fromCallable(() -> Files.readAllBytes(Paths.get("./gpt_answer.mp3")))
+                .subscribeOn(Schedulers.boundedElastic());
     }
 }
 
